# chronos

./: Cargo.toml  README.md  chronos.toml.example
benches/: simulation.rs
chronos-macros/: Cargo.toml
chronos-macros/src/: lib.rs
src/: config.rs  error.rs  lib.rs  main.rs  prelude.rs  sim.rs
src/cli/: analyze.rs  explore.rs  inject.rs  junit.rs  mod.rs  output.rs  replay.rs  run.rs
src/cluster/: happens_before.rs  mod.rs  node.rs
src/detection/: deadlock.rs  livelock.rs  mod.rs  race.rs
src/network/: fault.rs  latency.rs  link.rs  message.rs  mod.rs  sim.rs
src/recording/: format.rs  mod.rs  reader.rs  writer.rs
src/runtime/: coordinator.rs  mod.rs  task.rs  waker.rs
src/scheduler/: context_bound.rs  core.rs  dfs.rs  mod.rs  pct.rs  random.rs  strategy.rs
src/time/: clock.rs  instant.rs  mod.rs  timer.rs
src/viz/: mod.rs  replay.rs  report.rs  sequence.rs  timeline.rs
tests/: basic_test.rs  fault_injection_test.rs  integration.rs  network_test.rs  recording_test.rs  replay_test.rs  scheduler_test.rs  time_test.rs
tests/integration/: basic_test.rs  fault_injection_test.rs  replay_test.rs
