[package]
name = "chronos"
version = "0.1.0"
edition = "2021"
description = "Deterministic simulation testing framework for distributed systems"
license = "MIT"
repository = "https://github.com/sudokatie/chronos"
keywords = ["testing", "simulation", "distributed-systems", "deterministic"]
categories = ["development-tools::testing", "simulation"]

[workspace]
members = [".", "chronos-macros"]

[dependencies]
tokio = { version = "1.36", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
bincode = "1.3"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
thiserror = "2.0"
petgraph = "0.6"
lazy_static = "1.4"
ctrlc = "3.4"
futures = "0.3"
flate2 = "1.0"
chronos-macros = { path = "chronos-macros", optional = true }

[features]
default = []
macros = ["dep:chronos-macros"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "simulation"
harness = false

[[bin]]
name = "chronos"
path = "src/main.rs"

[lib]
name = "chronos"
path = "src/lib.rs"
